# rabbitmq-vps

./: Cargo.toml
.cargo/: config.toml
src/: lib.rs  main.rs
