[package]
name = "rabbitmq-vps"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-global-executor = "2.4.1"
diesel = "2.1.5"
diesel-async = { version = "0.4.1", features = ["postgres", "deadpool"] }
futures-lite = "2.3.0"
lapin = "2.3.1"
tokio = { version = "1.36.0", features = ["full"] }
